# OCCT

./: CMakeLists.txt  pyproject.toml  pyproject_devel.toml
.github/workflows/: wheels.yml
adm/cmake/: occt_csf.cmake  occt_toolkit.cmake
